Timestamps fixed to align with the bottom of the cards.

--- a/assets/scss/components/cards/main.scss
+++ b/assets/scss/components/cards/main.scss
@@ -48,6 +48,7 @@ $alphaville-card__color--yellow-tint3: #b35400;
 
 .alphaville-card__timestamp {
 	@include oCardTimestamp;
+	padding: 10px 0 0;
 }
 
 .alphaville-card__footer {
@@ -104,7 +105,7 @@ $alphaville-card__color--yellow-tint3: #b35400;
 		font-size: 14px;
 		color: $comment-counter-color;
 		float: right;
-		padding: 9px 0;
+		padding: 9px 0 0;
 
 		&:after {
 			@include oIconsGetIcon('comment', $comment-counter-color, 14);
